OPENIG-9515 Issue with error handling redirect URI (#305)
- Prefer consent context JWT `request` (JWT) claim for `redirect_uri` if present, otherwise use root-level consent JWT version if present. The `request` level is more secure ans so preferred.
- Same with `state`.
- Continue to raise if there is no supplied `redirect_uri`.
- See also PR references, especially OpenID FAPI fix: https://bitbucket.org/openid/fapi/issues/128/redirect_uri-in-url-query-vs-request.